// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> Render must match consent() 1`] = `
<div>
  <div>
    <div
      class="flash-messages"
    >
      <div
        class="flash flash-consent"
      >
        <button
          class="btn btn-sm primary flash-action btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="mr-2"
            height="16"
            role="img"
            style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.343 13.657A8 8 0 1 1 13.657 2.343 8 8 0 0 1 2.343 13.657zM6.03 4.97a.75.75 0 0 0-1.06 1.06L6.94 8 4.97 9.97a.75.75 0 1 0 1.06 1.06L8 9.06l1.97 1.97a.75.75 0 1 0 1.06-1.06L9.06 8l1.97-1.97a.75.75 0 1 0-1.06-1.06L8 6.94 6.03 4.97z"
              fill-rule="evenodd"
            />
          </svg>
          Cancel
        </button>
        <button
          class="btn btn-sm primary flash-action btn btn-primary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="mr-2"
            height="16"
            role="img"
            style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm3.78-9.72a.75.75 0 0 0-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 0 0-1.06 1.06l2 2a.75.75 0 0 0 1.06 0l4.5-4.5z"
              fill-rule="evenodd"
            />
          </svg>
          Approve
        </button>
        <svg
          aria-hidden="true"
          class="mr-2"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm9 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM6.92 6.085c.081-.16.19-.299.34-.398.145-.097.371-.187.74-.187.28 0 .553.087.738.225A.613.613 0 0 1 9 6.25c0 .177-.04.264-.077.318a.956.956 0 0 1-.277.245c-.076.051-.158.1-.258.161l-.007.004a7.728 7.728 0 0 0-.313.195 2.416 2.416 0 0 0-.692.661.75.75 0 0 0 1.248.832.956.956 0 0 1 .276-.245 6.3 6.3 0 0 1 .26-.16l.006-.004c.093-.057.204-.123.313-.195.222-.149.487-.355.692-.662.214-.32.329-.702.329-1.15 0-.76-.36-1.348-.863-1.725A2.76 2.76 0 0 0 8 4c-.631 0-1.155.16-1.572.438-.413.276-.68.638-.849.977a.75.75 0 1 0 1.342.67z"
            fill-rule="evenodd"
          />
        </svg>
        Flash message goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match consentWithInput() 1`] = `
<div>
  <div>
    <div
      class="flash-messages"
    >
      <div
        class="flash flash-consent"
      >
        <button
          class="btn btn-sm primary flash-action btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="mr-2"
            height="16"
            role="img"
            style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.343 13.657A8 8 0 1 1 13.657 2.343 8 8 0 0 1 2.343 13.657zM6.03 4.97a.75.75 0 0 0-1.06 1.06L6.94 8 4.97 9.97a.75.75 0 1 0 1.06 1.06L8 9.06l1.97 1.97a.75.75 0 1 0 1.06-1.06L9.06 8l1.97-1.97a.75.75 0 1 0-1.06-1.06L8 6.94 6.03 4.97z"
              fill-rule="evenodd"
            />
          </svg>
          Cancel
        </button>
        <button
          class="btn btn-sm primary flash-action btn btn-primary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="mr-2"
            height="16"
            role="img"
            style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm3.78-9.72a.75.75 0 0 0-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 0 0-1.06 1.06l2 2a.75.75 0 0 0 1.06 0l4.5-4.5z"
              fill-rule="evenodd"
            />
          </svg>
          Approve
        </button>
        <svg
          aria-hidden="true"
          class="mr-2"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm9 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM6.92 6.085c.081-.16.19-.299.34-.398.145-.097.371-.187.74-.187.28 0 .553.087.738.225A.613.613 0 0 1 9 6.25c0 .177-.04.264-.077.318a.956.956 0 0 1-.277.245c-.076.051-.158.1-.258.161l-.007.004a7.728 7.728 0 0 0-.313.195 2.416 2.416 0 0 0-.692.661.75.75 0 0 0 1.248.832.956.956 0 0 1 .276-.245 6.3 6.3 0 0 1 .26-.16l.006-.004c.093-.057.204-.123.313-.195.222-.149.487-.355.692-.662.214-.32.329-.702.329-1.15 0-.76-.36-1.348-.863-1.725A2.76 2.76 0 0 0 8 4c-.631 0-1.155.16-1.572.438-.413.276-.68.638-.849.977a.75.75 0 1 0 1.342.67z"
            fill-rule="evenodd"
          />
        </svg>
        Flash message goes here.
        <input
          class="flash-action form-control"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match error() 1`] = `
<div>
  <div>
    <div
      class="flash-messages"
    >
      <div
        class="flash flash-error"
      >
        <svg
          aria-hidden="true"
          class="mr-2"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.404 12.596a6.5 6.5 0 1 1 9.192-9.192 6.5 6.5 0 0 1-9.192 9.192zM2.344 2.343a8 8 0 1 0 11.313 11.314A8 8 0 0 0 2.343 2.343zM6.03 4.97a.75.75 0 0 0-1.06 1.06L6.94 8 4.97 9.97a.75.75 0 1 0 1.06 1.06L8 9.06l1.97 1.97a.75.75 0 1 0 1.06-1.06L9.06 8l1.97-1.97a.75.75 0 1 0-1.06-1.06L8 6.94 6.03 4.97z"
            fill-rule="evenodd"
          />
        </svg>
        Flash message goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match info() 1`] = `
<div>
  <div>
    <div
      class="flash-messages"
    >
      <div
        class="flash"
      >
        <svg
          aria-hidden="true"
          class="mr-2"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm6.5-.25A.75.75 0 0 1 7.25 7h1a.75.75 0 0 1 .75.75v2.75h.25a.75.75 0 0 1 0 1.5h-2a.75.75 0 0 1 0-1.5h.25v-2h-.25a.75.75 0 0 1-.75-.75zM8 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill-rule="evenodd"
          />
        </svg>
        Flash message goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match regular() 1`] = `
<div>
  <div>
    <div
      class="flash-messages"
    >
      <div
        class="flash"
      >
        Flash message goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match regularMultipleParagraphs() 1`] = `
<div>
  <div>
    <div
      class="flash-messages"
    >
      <div
        class="flash"
      >
        <p>
          This is a longer flash message in it's own paragraph. It ends up looking something like this. If we keep adding more text, it'll eventually wrap to a new line.
        </p>
        <p>
          And this is another paragraph.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match success() 1`] = `
<div>
  <div>
    <div
      class="flash-messages"
    >
      <div
        class="flash flash-success"
      >
        <svg
          aria-hidden="true"
          class="mr-2"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 8a6.5 6.5 0 1 1 13 0 6.5 6.5 0 0 1-13 0zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm11.78-1.72a.75.75 0 0 0-1.06-1.06L6.75 9.19 5.28 7.72a.75.75 0 0 0-1.06 1.06l2 2a.75.75 0 0 0 1.06 0l4.5-4.5z"
            fill-rule="evenodd"
          />
        </svg>
        Flash message goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match warning() 1`] = `
<div>
  <div>
    <div
      class="flash-messages"
    >
      <div
        class="flash flash-warn"
      >
        <svg
          aria-hidden="true"
          class="mr-2"
          height="16"
          role="img"
          style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.22 1.754a.25.25 0 0 0-.44 0L1.698 13.132a.25.25 0 0 0 .22.368h12.164a.25.25 0 0 0 .22-.368L8.22 1.754zm-1.763-.707c.659-1.234 2.427-1.234 3.086 0l6.082 11.378A1.75 1.75 0 0 1 14.082 15H1.918a1.75 1.75 0 0 1-1.543-2.575L6.457 1.047zM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-.25-5.25a.75.75 0 0 0-1.5 0v2.5a.75.75 0 0 0 1.5 0v-2.5z"
            fill-rule="evenodd"
          />
        </svg>
        Flash message goes here.
      </div>
    </div>
  </div>
</div>
`;
